# dakera-llamaindex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude-flow/data/: auto-memory-store.json
.claude-flow/neural/: stats.json
.github/: CODEOWNERS  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  integration.yml  release.yml
examples/: advanced_memory.py  basic_memory.py  batch_operations.py  hybrid_search.py  knowledge_graph.py  rag_pipeline.py  sessions.py
src/llama_index_dakera/: __init__.py  entities.py  index_store.py  knowledge_graph.py  memory_store.py  namespaces.py  sessions.py
tests/: test_entities.py  test_index_store.py  test_knowledge_graph.py  test_memory_store.py  test_namespaces.py  test_sessions.py
