[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llamaindex-dakera"
version = "0.2.0"
description = "LlamaIndex integration for the Dakera AI memory platform"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Dakera Team"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
keywords = ["llamaindex", "llama-index", "dakera", "memory", "vector", "ai", "rag"]
dependencies = ["dakera>=0.8.6", "llama-index-core>=0.10.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "responses>=0.23.0",
       "ruff>=0.1.0", "llama-index-core>=0.10.0", "mypy>=1.0.0", "pip-audit>=2.0.0"]

[project.urls]
Homepage = "https://github.com/dakera-ai/dakera-llamaindex"
Documentation = "https://docs.dakera.ai/integrations/llamaindex"
Repository = "https://github.com/dakera-ai/dakera-llamaindex"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llama_index_dakera = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
